[REF] Car클래스에서 랜덤 숫자 생성 기능 분리 및 전체적인 리팩토링